Finished adding basic authentication via authentication controller & added scopes to JWT claim.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,9 @@
 jwt:
   header: Authorization
-  secret: Harambe
+  secret: HARAMBE
   expiration: 604800
   route:
     authentication:
       path: auth
+      login: login
       refresh: refresh
